--- a/package.json
+++ b/package.json
@@ -1,9 +1,26 @@
 {
   "name": "sema-engine",
   "version": "0.0.1",
-  "description": "Module containing a signal engine and compiler for a live coding language ecossystem",
+  "description": "Module containing Sema's signal engine and compiler for a live coding language ecossystem",
   "main": "build/index.js",
   "repository": "https://github.com/frantic0/sema-engine.git",
   "author": "Francisco Bernardo <f.bernardo@sussex.ac.uk>",
-  "license": "MIT"
+  "license": "MIT",
+	"keywords": [
+		"Web Audio",
+		"Web Audio API",
+		"Synthesis",
+		"Playback",
+		"DSP",
+		"Signal Processing",
+		"Interactive Music"
+	],
+  "dependencies": {
+    "nearley": "^2.20.1"
+  },
+  "scripts":{
+    "build": "",
+    "dev": "",
+    "test": ""
+  }
 }
