basic module working with engine

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
-      "url": "http://localhost:9000",
-      "webRoot": "${workspaceFolder}/sema-engine/"
+      "url": "http://localhost:9001",
+      "webRoot": "${workspaceFolder}/sema-engine"
     }
   ]
 }
