compiling to examples

--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   ],
   "module": "dist/index.mjs",
   "main": "dist/index.js",
+  "private": true,
   "files": [
     "dist/*"
   ],
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "webpack && cp dist/sema-engine.js dist/ringbuf.js dist/maxi-processor.js dist/maximilian.wasmmodule.js examples/",
     "test": "node test/test.js",
     "pretest": "npm run build"
   },
@@ -29,15 +29,11 @@
     "nearley": "^2.20.1"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-eslint": "^8.0.1",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@rollup/plugin-wasm": "^5.1.2",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
+    "file-loader": "^6.2.0",
     "mocha": "^7.1.1",
-    "rollup": "^2.36.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "maximilian-wasm": "0.0.2"
+    "webpack": "^5.12.3",
+    "webpack-cli": "^4.3.1"
   }
 }
