--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "Signal Processing",
     "Interactive Music"
   ],
-  "module": "dist/index.mjs",
-  "main": "dist/index.js",
+  "module": "dist/sema-engine.mjs",
+  "main": "dist/sema-engine.js",
   "scripts": {
-    "build": "rollup -c && cp dist/sema-engine.js dist/ringbuf.js dist/maxi-processor.js dist/maximilian.wasmmodule.js examples/",
-    "dev": "rollup -c -w && cp dist/sema-engine.js dist/ringbuf.js dist/maxi-processor.js dist/maximilian.wasmmodule.js examples/",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "test": "node test/test.js",
     "pretest": "npm run build",
     "clean": "rm -rf build dist",
@@ -37,6 +37,7 @@
     "eslint-config-google": "^0.14.0",
     "mocha": "^7.1.1",
     "rollup": "^2.36.1",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-terser": "^7.0.2"
   }
 }
