--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "sema-engine",
   "version": "0.0.2",
   "description": "Module containing Sema's signal engine and compiler for a live coding language ecossystem",
-  "repository": "https://github.com/frantic0/sema-engine.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/frantic0/sema-engine.git"
+  },
   "author": "Francisco Bernardo <f.bernardo@sussex.ac.uk>",
   "license": "MIT",
   "keywords": [
