added dev server plugin to test dev build

--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
     "maximilian-wasm": "0.0.2"
   },
   "devDependencies": {
+    "rollup": "^2.36.1",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-wasm": "^5.1.2",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^7.1.1",
-    "rollup": "^2.36.1",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "mocha": "^7.1.1"
   }
 }
