--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,14 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
+
     {
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
-      "url": "http://localhost:9001",
-      "webRoot": "${workspaceFolder}/sema-engine/"
+      "url": "http://localhost:9002",
+      "webRoot": "${workspaceFolder}/example/"
     }
   ]
 }
