--- a/package.json
+++ b/package.json
@@ -28,20 +28,21 @@
     "clean-all": "rm -rf .cache dist node_modules package-lock.json"
   },
   "dependencies": {
-    "nearley": "^2.20.1",
-    "maximilian-wasm": "0.0.2"
+    "maximilian-wasm": "0.0.2",
+    "nearley": "^2.20.1"
   },
   "devDependencies": {
-    "rollup": "^2.36.1",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-wasm": "^5.1.2",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-terser": "^7.0.2",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^7.1.1"
+    "mocha": "^7.1.1",
+    "rollup": "^2.36.1",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
