--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "module": "dist/sema-engine.mjs",
   "main": "dist/sema-engine.js",
   "scripts": {
-    "build": "rollup -c --environment BUILD:production",
+    "build": "rollup -c --environment BUILD:development",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
     "pretest": "npm run build",
