--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "build": "rollup -c --environment BUILD:development",
     "dev": "rollup -c -w",
-    "test": "node test/test.js",
+    "test": "ava",
     "pretest": "npm run build",
     "clean": "rm -rf build dist",
     "clean-all": "rm -rf .cache dist node_modules package-lock.json"
@@ -36,6 +36,7 @@
     "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-wasm": "^5.1.2",
+    "ava": "^3.15.0",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^7.1.1",
