--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "sema-engine",
-  "version": "0.0.12",
+  "version": "0.0.14",
   "description": "Module containing Sema's signal engine and compiler for a live coding language ecossystem",
   "repository": {
     "type": "git",
     "url": "https://github.com/frantic0/sema-engine.git"
   },
   "author": "Francisco Bernardo <f.bernardo@sussex.ac.uk>",
+  "contributors": [
+    "Chris Kiefer <c.kiefer@sussex.ac.uk> (http://luuma.net)",
+    "Thor Magnusson <t.magnusson@sussex.ac.uk> (http://www.ixi-audio.net)"
+  ],
   "license": "MIT",
   "keywords": [
     "Web Audio",
