--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
   "scripts": {
     "build": "rollup -c --environment BUILD:development",
     "dev": "rollup -c -w",
-    "test": "ava",
-    "pretest": "npm run build",
+    "pretest": "cpx 'assets/langs/*.txt' './test/fixtures/lang/'",
+    "test:unit": "mocha './test/unit' --require esm",
+    "test:integration": "mocha './test/integration/' --require esm",
+    "test": "npm run test:unit && npm run test:integration",
+    "coverage": "nyc npm run test",
     "clean": "rm -rf build dist",
     "clean-all": "rm -rf .cache dist node_modules package-lock.json"
   },
@@ -40,10 +43,13 @@
     "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-wasm": "^5.1.2",
-    "ava": "^3.15.0",
+    "chai": "^4.2.0",
+    "cpx": "^1.5.0",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^7.1.1",
+    "esm": "^3.2.25",
+    "mocha": "^7.2.0",
+    "nyc": "^15.1.0",
     "rollup": "^2.36.1",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-livereload": "^2.0.0",
