mocha integration tests for compile passing

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "build": "rollup -c --environment BUILD:development",
     "dev": "rollup -c -w",
     "pretest": "cpx 'assets/langs/*.txt' './test/fixtures/lang/'",
-    "test:unit": "mocha './test/unit' --require esm",
-    "test:integration": "mocha './test/integration/' --require esm",
+    "test:unit": "mocha  './test/unit' --require esm",
+    "test:integration": "mocha --recursive --require esm",
     "test": "npm run test:unit && npm run test:integration",
     "coverage": "nyc npm run test",
     "clean": "rm -rf build dist",
