worker configured and working

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "clean-all": "rm -rf .cache dist node_modules package-lock.json"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^3.0.0",
     "maximilian-wasm": "0.0.2",
-    "nearley": "^2.20.1"
+    "nearley": "^2.20.1",
+    "ringbuf.js": "^0.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
