--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sema-engine",
-  "version": "0.0.16",
-  "description": "Module containing Sema's signal engine and compiler for a live coding language ecossystem",
+  "version": "0.0.17",
+  "description": "Module containing Sema's signal engine and compiler for a live coding language ecosystem",
   "repository": {
     "type": "git",
     "url": "https://github.com/frantic0/sema-engine.git"
