--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-web-worker-loader": "^1.6.0"
+    "rollup-plugin-web-worker-loader": "^1.6.0",
+    "typescript": "^4.2.4"
   }
 }
