--- a/package.json
+++ b/package.json
@@ -39,22 +39,22 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-eslint": "^8.0.1",
-    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-wasm": "^5.1.2",
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "cpx": "^1.5.0",
-    "eslint": "^7.17.0",
+    "eslint": "^7.27.0",
     "eslint-config-google": "^0.14.0",
     "esm": "^3.2.25",
     "mocha": "^7.2.0",
     "nyc": "^15.1.0",
-    "rollup": "^2.36.1",
-    "rollup-plugin-copy": "^3.3.0",
+    "rollup": "^2.50.5",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-web-worker-loader": "^1.6.0",
-    "typescript": "^4.2.4"
+    "rollup-plugin-web-worker-loader": "^1.6.1"
   }
 }
