--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/maximilian"]
 	path = src/maximilian
 	url = https://github.com/micknoise/Maximilian.git
+[submodule "src/open303"]
+	path = src/open303
+	url = git@github.com:chriskiefer/open303.git
