--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
 		"rollup-plugin-sourcemaps": "^0.6.3",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-web-worker-loader": "^1.6.1"
+	},
+	"files" : {
+
 	}
 }
