added index.* to file in package

--- a/package.json
+++ b/package.json
@@ -64,12 +64,12 @@
 	"files": [
 		"maxi-processor.js",
 		"package.json",
-		"sema-engine.js",
-		"sema-engine.js.map",
-		"sema-engine.min.js",
-		"sema-engine.min.js.map",
-		"sema-engine.mjs",
-		"sema-engine.mjs.map"
+		"index.js",
+		"index.js.map",
+		"index.min.js",
+		"index.min.js.map",
+		"index.mjs",
+		"index.mjs.map"
 	],
 	"directories": {
 		"src": "src/",
