--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
 	},
 	"dependencies": {
 		"nearley": "^2.20.1",
-		"ringbuf.js": "^0.1.0",
-		"webmidi": "^2.5.2"
+		"ringbuf.js": "^0.1.0"
 	},
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^17.0.0",
